Fix stats bug (#184)
* Remove all instances of address

* Add new command: Remark

* Update UserGuide.adoc

* Update UserGuide.adoc

* Update Ui.png

* Update UserGuide.adoc

* Update Ui.png

* Revert "Update Ui.png"

This reverts commit 09529ffa6d15f40b21807f2d1af2b6fd64b99378.

* Revert "Update UserGuide.adoc"

This reverts commit 1011cb16e1d28a6e0b104c2ab2558f326e4deca1.

* Revert "Update Ui.png"

This reverts commit 43aa00b780ab5e7ec30d320bddd7fbb157c98808.

* Revert "Update UserGuide.adoc"

This reverts commit c907562aa13235e5c18bbad56c32118429e03c55.

* Revert "Update UserGuide.adoc"

This reverts commit ea7590c2db054fb1359da7ec92c1364efa3b6da6.

* Revert "Merge branch 'tutorial-adding-command'"

This reverts commit 3f671ae4b369ecc1941d61313756e879f0c52515, reversing
changes made to 5e1abfd36d07a4f508e11d4db75ed375d1c7d091.

* Revert "Remove all instances of address"

This reverts commit 5e1abfd36d07a4f508e11d4db75ed375d1c7d091.

* Update UserGuide.adoc

* Update UserGuide.adoc

* Implement stats command i.e. the statistics feature

* Fix line ending

* Change the logic of how stats command works

* Remove existing stats exceptions and add new ones

* Add stylesheets related to the charts and graphs generated by stats command

* Modify and add new custom charts and graphs

* Fix coding style violations

* Minor changes to exception handling

* Create tests for stats command

* Fix coding style violations

* Create tests for parsing stats command

* Fixed unhandled exception when review is less than 3

* Fix coding style violations

* Rename stats exception classes to follow convention

* Make appropriate changes based on code review

* Attempt to fix wrong line ending

* Fix CRLF line endings

* Optimize compareTo for priority queues

* THIRD attempt at fixing line ending issue

* Edit stats section of user guide to make more sense

* Fix the stats issue where most shows lea

--- a/docs/UserGuide.adoc
+++ b/docs/UserGuide.adoc
@@ -281,7 +281,7 @@ Example: `delete 1`
 // tag::stats[]
 ===== Showing overall statistics: `stats`
 
-Presents a visual overview of the user’s eateries and reviews. Eatery and review data used to generate the statistics are collated from the start of the application. The command will generate six types of statistics:  most visited eateries, least visited eateries, eateries you spent the most at, eateries you spent the least at, price per category, number of visits per category. +
+Presents a visual overview of the user’s eateries and reviews. Eatery and review data used to generate the statistics are collated from the start of the application. The command will generate six types of statistics:  most visited eateries, least visited eateries, eateries you spent the most at (on average), eateries you spent the least at (on average), price per category, number of visits per category. +
 Format: `stats`
 
 ****
