--- a/docs/team/sam-limyr.adoc
+++ b/docs/team/sam-limyr.adoc
@@ -42,6 +42,10 @@ note to remove the leftover syntax from the addition of the note fragment tag.
 *** Managed release v1.3 (out of v1.0 to v1.4)
 ** Enhancements to existing features:
 *** Wrote test code for all Note-related code
+** GUI
+*** Did GUI for Notes
+** Storage
+*** Did Storage for Notes
 * <I guess I need to pore through all my PRs and look for other documentation and code refactoring stuff; also need
 to look at reposense and compare what's there>
 
