--- a/docs/team/weiyang13.adoc
+++ b/docs/team/weiyang13.adoc
@@ -58,9 +58,13 @@ include::../UserGuide.adoc[tag=tx]
 |_Given below are sections I contributed to the Developer Guide. They showcase my ability to write technical documentation and the technical depth of my contributions to the project._
 |===
 
-include::../DeveloperGuide.adoc[tag=undoredo]
+include::../DeveloperGuide.adoc[tag=tabswitching]
 
-include::../DeveloperGuide.adoc[tag=dataencryption]
+include::../DeveloperGuide.adoc[tag=overviewtx]
+
+include::../DeveloperGuide.adoc[tag=transfilter]
+
+include::../DeveloperGuide.adoc[tag=transadd]
 
 
 == PROJECT: PowerPointLabs
