--- a/docs/UserGuide.adoc
+++ b/docs/UserGuide.adoc
@@ -170,6 +170,56 @@ image::after-oneshot-sort.png[width="450"]
 After sorting, commands that require INDEX as an input field (e.g. `delete`) will take in INDEX with regards to the new list  displayed. e.g. `delete 1` will delete the current first engagement displayed.
 //end::sort[]
 
+=== Locating appointments by attendee, description, location and priority: `find`
+
+Finds engagements whose names contain any of the given keywords. Engagements can be in different types: `Appointment`, `Meeting` and `Interview`.
+
+Format: `find TAG/KEYWORD`
+
+Valid tags: `a/`, `d/`, `l/`, `p/`
+
+[%header, cols=3*]
+|===
+|Search parameter
+|Tag
+|Notes
+
+|Attendees
+|`a/`
+|Engagements containing attendee keyword will be returned. e.g. `find a/Hans` will return
+all engagements containing the attendee `Hans`. +
+e.g. `Hansen Gruber`, `hans christian`
+
+
+|Description
+|`d/`
+|Descriptions containing description keyword will be returned. e.g. `find d/Singapore based` will return
+all engagements containing the description `Singapore based`. +
+e.g. `singapore based internship appointment`, `Singapore based project meeting`
+
+|Location
+|`l/`
+|Only exact full words will be matched e.g. `find Com Basement` will not match `Com Basement Room 6`
+
+|Priority
+|`p/`
+|`find p/High`, `find p/Medium`, `find p/Low`, `find p/None`
+|===
+
+****
+* All search are case insensitive. e.g `find a/hans` is equivalent to `find a/Hans`
+* For non-interactive search, the order of the prefixes does not matter. e.g. `find a/Hans Bo p/high` is equivalent to `find p/high a/Hans`
+* For non-interactive search, at least one search parameter should be specified.
+* For interactive search, all search parameters must be specified sequentially according to the prompt.
+****
+
+Examples:
+
+* `find a/John` +
+Returns `john` and `John Doe`
+* `find a/Betsy d/Project Meeting l/NUS p/None` +
+Returns any engagement having attendee `Betsy`, description `Project Meeting`, location `NUS`, and priority `None`.
+
 === Deleting an appointment : `delete`
 
 Deletes the specified appointment from the engagement list. +
@@ -304,38 +354,47 @@ application is in another tab or if attempting to go below the minimum allowable
 Format: `calendar c/previousmonth`
 
 .Changing to the previous month from November 2019
-image::calendar-previous-month.png[width="450"]
+image::calendar-previous-month.png[width="600"]
 {empty} +
 Alternatively, you may click on the blue button with the left arrow next to the calendar's month title
 to change the display to the previous month. The button will not work if the calendar is displaying January 0001.
 
 This command closes any open engagement windows from the current month before updating the display to the previous month.
 
-=== Typing game : `tab game`
-Changes the current window to the start window with a kbd:[Start] button.
+// tag::game[]
+=== Typing game : `tab b/game`
+Changes the current window to the TypingGame window which has a kbd:[Start] button.
 
-.Start window of the game
-image::StartWindow.png[width="450"]
+.Starting window of the TypingGame Window
+image::StartWindow.png[width="600"]
 Click the kbd:[Start] button to open the game in a new window.
 
-.Game window
-image::GameWindow.png[width="450"]
+.Sample game play
+image::GameWindow.png[width="600"]
 
 There are moving words that you can type in order to score points. Once you correctly type the specified word,
 the word disappears and the increase in points is reflected in the player information panel in the game window.
-[NOTE]
-After typing a word, remember to press kbd:[Enter] to clear the text area which is located at the bottom of the screen.
 
+[TIP]
+Press kbd:[SPACEBAR] or kbd:[Enter] to clear the text area which is located at the bottom of the screen.
 
 When you fail to type the word before the moving word reaches the bottom of screen, the decrease in health points
 is reflected in the player information panel in the game window.
+
+[NOTE]
+As the game progresses, the words move faster, hence increasing difficulty.
+
+[WARNING]
+Closing the game midway would result in loss of in game progress.
+
 After the health points reaches zero, `GAME OVER` is displayed as shown below.
 
 .Sample game play when game is over
-image::GameOver.png[width="450"]
+image::GameOver.png[width="600"]
 
 Once the game is over, you can manually close the application by clicking the kbd:[x] on the top right hand corner of the window.
 If you want to play the game again, click the kbd:[Start] button shown in the Start window.
+// end::game[]
 
 // tag::pdf-command[]
 
